# goof2

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  LICENSE-simde  LICENSE.sljit  README.md  argh  cpp-terminal  linenoise-ng  main.cxx  simde  sljit  xxhash
.github/: dependabot.yml
.github/workflows/: cmake-single-platform.yml  codeql.yml  jekyll-gh-pages.yml
assets/: ml_model.txt
cmake/: goof2Config.cmake.in
cmake/patches/: cpp-terminal-args-shellapi.patch  cpp-terminal-winternl.patch  patch-cpp-terminal-winternl.cmake
cmake/shims/: cppterminal_winfix.hxx
cpp-terminal/private/: signals.cpp
docs/: _config.yml  dependencies.md  index.md  ml_optimizer.md  os-memory.md
include/: ansi.hxx  jit_selector.hxx  ml_memory_model.hxx  ml_opt.hxx  parallel.hxx  pch.hxx  repl.hpp  repl.hxx  threadPool.hxx  vm.hpp  vm.hxx
include/vm/: executor.hxx  memory.hxx  optimizer.hxx
regex-develop/: build.jam
regex-develop/.github/workflows/: ci.yml
regex-develop/example/: Jamfile.v2
regex-develop/test/: Jamfile.v2
src/: bfShared.hxx  jit.cxx  jit.hxx  loop_cache.cxx  ml_opt.cxx  repl.cpp  repl.cxx  vm.cpp  vm.cxx
src/vm/: executor.cxx  memory.cxx  optimizer.cxx
tests/: CMakeLists.txt  fuzz_execute.cxx  helpers.hxx  repl_benchmark.cxx  testMlOpt.cxx  test_alloc_fail.cxx  test_cli_eval.cxx  test_execute.cxx  test_jit_regression.cxx  test_load.cxx  test_memory_models.cxx  test_model_selection.cxx  test_parallel.cxx
tools/: generateMlModelHeader.py  strideMaskBench.cxx  train_memory_model.py  train_ml_model.py
tools/ml_fuzz/: trainModel.py
tools/ml_jit_selector/: train.py
tools/ml_memmodel/: data.csv  model.csv  train.py
tools/ml_optimizer/: collect.py  train.py
